2012-04-23  Ugo Pattacini  <ugo.pattacini@iit.it>
    * src/libYAR_dev/include/yarp/dev/GazeControl.h
    Added a couple of new methods to check saccades termination

2012-04-06  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_math/src/math.cpp
    * src\libYARP_math\include\yarp\math\Math.h
    * src\libYARP_math\harness\MathTest.cpp
    Add crossProductMatrix, outer product and related tests.

2012-04-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/wire_rep_utils/WireTwiddler.h: add missing
	methods start/stopWrite [thanks Stephane Lallee]

2012-04-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BufferedConnectionWriter.cpp: fix
	for memory problem [thanks Lorenzo Natale]

	* src/libYARP_OS/harness/StampTest.cpp: test for memory
	problem report by Lorenzo [thanks Lorenzo Natale]

2012-04-04  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_sig/include/yarp/sig/Matrix.h
	* src/libYARP_sig/src/Matrix.cpp
    Add methods subrow and subcol

2012-04-02 Lorenzo Natale <lorenzo.natale@iit.it>
    * Reorganization of control board interfaces in separate files
	* Added IEncodersTimed
	* Increase minor version number: 2.3.16
	
2012-03-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/ImageFile.cpp: support pgm.

2012-03-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/Image.cpp: correctly reallocate 
	memory when image type changes without change in dimension.

2012-03-27  Marco Randazzo <marco.randazzo@iit.it>
    * src/libYARP_dev/src/RemoteControlBoard.cpp
    
    fixed bug in method getPids(): the method was retrieving just the first pid of the list.
  
2012-03-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add
	findNestedResourceFinder() function [thanks Lorenzo Natale]

	* src/libYARP_OS/harness/ResourceFinderTest.cpp: add
	test for nested sections in resource finders.
