@@ -106,3 +106,52 @@ Matrix yarp::math::pinv(const Matrix &in, double tol)
 			Spinv(c,c) = 1/Sdiag(c);
 	return V*Spinv*U.transposed();
 }
+
+void yarp::math::pinv(const Matrix &in, Matrix &out, double tol)
+{
+	int m = in.rows(), n = in.cols(), k = m<n?m:n;
+	Matrix U(m,k), V(n,k);
+	Vector Sdiag(k);
+
+	yarp::math::SVD(in, U, Sdiag, V);
+
+	Matrix Spinv = zeros(k,k);
+	for (int c=0;c<k; c++)
+		if ( Sdiag(c)> tol)
+			Spinv(c,c) = 1/Sdiag(c);
+	out = V*Spinv*U.transposed();
+}
+
+Matrix yarp::math::pinv(const Matrix &in, Vector &sv, double tol)
+{
+	int m = in.rows(), n = in.cols(), k = m<n?m:n;
+	Matrix U(m,k), V(n,k);
+    if(sv.size()!=k)
+        sv.resize(k);
+
+	yarp::math::SVD(in, U, sv, V);
+
+	Matrix Spinv = zeros(k,k);
+	for (int c=0;c<k; c++)
+		if ( sv(c)> tol)
+			Spinv(c,c) = 1/sv(c);
+    
+    return V*Spinv*U.transposed();
+}
+
+void yarp::math::pinv(const Matrix &in, Matrix &out, Vector &sv, double tol)
+{
+	int m = in.rows(), n = in.cols(), k = m<n?m:n;
+	Matrix U(m,k), V(n,k);
+    if(sv.size()!=k)
+        sv.resize(k);
+
+	yarp::math::SVD(in, U, sv, V);
+
+	Matrix Spinv = zeros(k,k);
+	for (int c=0;c<k; c++)
+		if ( sv(c)> tol)
+			Spinv(c,c) = 1/sv(c);
+    
+    out = V*Spinv*U.transposed();
+}
